--- a/package.json
+++ b/package.json
@@ -2,12 +2,13 @@
   "name": "difficultiesALive",
   "version": "0.0.1",
   "description": "difficultiesALive",
-  "main": "/src/index.js",
+  "main": "/src/js/index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "webpack-dev-server --progress --colors --mode development",
     "dev": "webpack -d --progress --colors --mode development",
-    "build": "webpack -p --progress --colors --mode production"
+    "build": "webpack -p --progress --colors --mode production",
+    "fix": "eslint src/js/** --fix"
   },
   "keywords": [],
   "author": "",
@@ -16,7 +17,8 @@
     "prop-types": "^15.6.2",
     "react": "^16.4.1",
     "react-dom": "^16.4.1",
-    "react-router-dom": "^4.3.1"
+    "react-router-dom": "^4.3.1",
+    "react-transition-group": "^2.4.0"
   },
   "devDependencies": {
     "babel-cli": "^6.26.0",
@@ -25,6 +27,11 @@
     "babel-preset-env": "^1.7.0",
     "babel-preset-react": "^6.24.1",
     "css-loader": "^1.0.0",
+    "eslint": "^5.2.0",
+    "eslint-config-airbnb": "^17.0.0",
+    "eslint-plugin-import": "^2.13.0",
+    "eslint-plugin-jsx-a11y": "^6.1.1",
+    "eslint-plugin-react": "^7.10.0",
     "style-loader": "^0.21.0",
     "webpack": "^4.16.2",
     "webpack-cli": "^3.1.0",
