--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "start": "webpack-dev-server --progress --colors --mode development",
     "dev": "webpack -d --progress --colors --mode development",
     "build": "webpack -p --progress --colors --mode production",
-    "fix": "eslint src/js/** --fix"
+    "fix": "eslint src/js/**.js --fix"
   },
   "keywords": [],
   "author": "",
@@ -17,8 +17,10 @@
     "prop-types": "^15.6.2",
     "react": "^16.4.1",
     "react-dom": "^16.4.1",
+    "react-redux": "^5.0.7",
     "react-router-dom": "^4.3.1",
-    "react-transition-group": "^2.4.0"
+    "react-transition-group": "^2.4.0",
+    "redux": "^4.0.0"
   },
   "devDependencies": {
     "babel-cli": "^6.26.0",
