--- a/package.json
+++ b/package.json
@@ -8,12 +8,14 @@
     "start": "webpack-dev-server --progress --colors --mode development",
     "dev": "webpack -d --progress --colors --mode development",
     "build": "webpack -p --progress --colors --mode production",
-    "fix": "eslint src/js/**.js --fix"
+    "fix": "eslint src/js/**.js --fix",
+    "deploy": "firebase deploy"
   },
   "keywords": [],
   "author": "",
   "license": "MIT",
   "dependencies": {
+    "firebase": "^5.3.1",
     "prop-types": "^15.6.2",
     "react": "^16.4.1",
     "react-dom": "^16.4.1",
